--- a/index.html
+++ b/index.html
@@ -41,6 +41,8 @@
       </div>
     </nav>
 
+    <h1 class="text-[black] my-[200px]">Salom Burhon</h1>
+
     <script>
       const sidebarBtn = document.getElementById("sidebar-btn");
       const closeSidebar = document.getElementById("close-sidebar");
